@@ -10,6 +10,8 @@ NEWS/ChangeLog for hydroPSO
         o 'ReadPlot_results': updated description of the 'dp3D.names' argument    
         o 'plot_out'        : 'main' argument is not overritten to "Observed vs 'best' Simulation" when this argument is provided and 'ptype=="ts"'
         o 'plot_results'    : 'main' argument is now (internally) passed to the 'plot_out' function.
+        o 'plot_particles'  : 'main' argument is now omitted for the 3D totty plots ('plot_NparOF' function), in order to avoid confusing (and sometimes
+                              unnecessary) titles when 'main' is too long
 
 0.3-0	19-Dec-2012
         o 'hydroPSO'    : -) parallel capable (OS-independent)
